--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My family</title>
-    <link rel="stylesheet" href="4.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <div class="header">
